--- a/Projeto_DevMedia - 16/estilos.css
+++ b/Projeto_DevMedia - 16/estilos.css
@@ -1,6 +1,7 @@
 body
 {
     margin:0;
+    padding: 0;
     font-family: 'Montserrat', sans-serif;
     font-family: 'Ysabeau Infant', sans-serif;
 }
