--- a/Projeto_DevMedia - 17/estilos_index.css
+++ b/Projeto_DevMedia - 17/estilos_index.css
@@ -30,8 +30,11 @@ header
     width: 100%;
     height: 650px;
     background-image: url(Imagens/recepcao.png);
-    background-size: cover;
-}
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+
+}    
 .banner
 {
     height: 550px;
@@ -170,8 +173,31 @@ footer
 
 @media (max-width: 768px)
 {
-
-
+    .topo 
+    {
+          height: 185px;
+          display: flex;
+          flex-direction: column;
+          
+    }
+    nav
+    {
+        border-top: 1px solid;
+        padding: 10px;
+        display: flex;
+        justify-content: space-evenly;
+    }
+    .topo a
+    {
+         padding: 10px;
+    }
+    .banner
+    {
+        height: 200px;
+        font-size: 15px;
+        display: flex;
+        flex-wrap: wrap;
+    }
 }
 
 @media (max-width: 425px)
@@ -198,6 +224,7 @@ footer
     {
         height: 200px;
         font-size: 15px;
+        width: 200px;
     }
 }
 
