--- a/Projeto_DevMedia - 17/estilos_index.css
+++ b/Projeto_DevMedia - 17/estilos_index.css
@@ -25,14 +25,6 @@ nav a
     color: white;
     padding: 11px;
 }
-header
-{
-    width: 100%;
-    height: 650px;
-    background-image: url(Imagens/recepcao.png);
-    background-size: 100%;
-    background-repeat: no-repeat;
-}    
 .banner
 {
     height: 550px;
@@ -40,6 +32,9 @@ header
     align-items: center;
     color: white;
     font-size: 21px;
+    background-image: url(Imagens/recepcao.png);
+    background-size: 100%;
+    background-repeat: no-repeat;
 }
 .Sobre
 {
@@ -171,9 +166,10 @@ footer
 
 @media (max-width: 768px)
 {
+
     .topo 
     {
-          height: 185px;
+          height: 150px;
           display: flex;
           flex-direction: column;
           
@@ -190,19 +186,19 @@ footer
          padding: 10px;
     }
     .banner
-    {
+    {   
         height: 200px;
-        font-size: 15px;
         display: flex;
-        flex-wrap: wrap;
+        font-size: 13px;
     }
+
 }
 
 @media (max-width: 425px)
 {
     .topo 
     {
-          height: 185px;
+          height: 150px;
           display: flex;
           flex-direction: column;
           
@@ -219,10 +215,10 @@ footer
          padding: 10px;
     }
     .banner
-    {
+    {   
         height: 200px;
-        font-size: 15px;
-        width: 200px;
+        display: flex;
+        font-size: 13px;
     }
 }
 
