--- a/Projeto_DevMedia - 17/estilos_index.css
+++ b/Projeto_DevMedia - 17/estilos_index.css
@@ -233,6 +233,10 @@ footer
 
 @media (max-width: 425px)
 {
+    body 
+    {
+        overflow-x: hidden;
+    }
     .topo 
     {
           height: 150px;
