--- a/Projeto_DevMedia - 17/estilos_especialidades.css
+++ b/Projeto_DevMedia - 17/estilos_especialidades.css
@@ -18,7 +18,7 @@ body
     width: 180px;
     height: 90px;
 }
-.link_2 a 
+.link_1 a 
 {
     text-decoration: none;
     font-size: 21px;
@@ -82,8 +82,8 @@ body
 }
 .Cads img
 {
-    width: 290px;
-    height: 230px;
+    width: 320px;
+    height: 245px;
 }
 table
 {
@@ -133,4 +133,158 @@ footer
     font-size: 20px;
     margin-top: 30px;
 }
+@media (max-width: 768px)
+{
+    body 
+    {
+        overflow-x: hidden;
+    }
+    .topo 
+    {
+          height: 150px;
+          display: flex;
+          flex-direction: column;
+          
+    }
+    nav
+    {
+        border-top: 1px solid;
+        padding: 10px;
+        display: flex;
+        justify-content: space-evenly;
+        width: 95%;
+    }
+    .topo a
+    {
+         padding: 10px;
+    }
+    .banner
+    {   
+        height: 200px;
+        display: flex;
+        font-size: 13px;
+    }
+    .img_medico img 
+    {
+        display: none;
+    }
+    .Sobre 
+    {
+        font-size: 18px;
+    }
+    .Sobre_titulo p 
+    {
+        width: 450px;
+        margin: 5px auto 20px auto;
+    }
+    .Especialidades
+    {
+        font-size: 18px;
+    }
+    .Especialidades_titulo p 
+    {
+        width: 450px;
+        margin: 5px auto 20px auto;
+    }
+    .cads
+    {
+        height: 900px;
+    }
+    .botao_1
+    {
+        padding: 30px;
+    }
+    footer
+    {
+        font-size: 18px;
+    }
+}
+@media (max-width: 425px)
+{
+    body 
+    {
+        overflow-x: hidden;
+    }
+    .topo 
+    {
+          height: 150px;
+          display: flex;
+          flex-direction: column;
+          
+    }
+    nav
+    {
+        border-top: 1px solid;
+        padding: 10px;
+        display: flex;
+        justify-content: space-evenly;
+        width: 95%;
+    }
+    .topo a
+    {
+         padding: 10px;
+    }
+    .banner
+    {   
+        height: 200px;
+        display: flex;
+        font-size: 13px;
+    }
+    .img_medico img 
+    {
+        display: none;
+    }
+    .Sobre 
+    {
+        font-size: 18px;
+    }
+    .Sobre_titulo p 
+    {
+        width: 400px;
+        margin: 5px auto 20px auto;
+    }
+    .Especialidades
+    {
+        font-size: 18px;
+    }
+    .Especialidades_titulo p 
+    {
+        width: 400px;
+        margin: 5px auto 20px auto;
+    }
+    .cads
+    {
+        height: 900px;
+    }
+    .botao_1
+    {
+        padding: 30px;
+    }
+    footer
+    {
+        font-size: 18px;
+    }
+}
+ /* Estilo botões */
+
+ .link_2:hover 
+ {
+    color: rgba(0, 0, 0, 0.781);
+    font-size: 25px;
+    font-weight: bold;
+ }
+
+ .link_3:hover
+ {
+    font-size: 22px;
+    font-weight: bold;
+
+ }
+ .logo img:hover
+ {
+    width: 190px;
+    height: 95px;
+ }
+ 
+
 
