--- a/Projeto_DevMedia - 17/estilos_especialidades.css
+++ b/Projeto_DevMedia - 17/estilos_especialidades.css
@@ -133,138 +133,6 @@ footer
     font-size: 20px;
     margin-top: 30px;
 }
-@media (max-width: 768px)
-{
-    body 
-    {
-        overflow-x: hidden;
-    }
-    .topo 
-    {
-          height: 150px;
-          display: flex;
-          flex-direction: column;
-          
-    }
-    nav
-    {
-        border-top: 1px solid;
-        padding: 10px;
-        display: flex;
-        justify-content: space-evenly;
-        width: 95%;
-    }
-    .topo a
-    {
-         padding: 10px;
-    }
-    .banner
-    {   
-        height: 200px;
-        display: flex;
-        font-size: 13px;
-    }
-    .img_medico img 
-    {
-        display: none;
-    }
-    .Sobre 
-    {
-        font-size: 18px;
-    }
-    .Sobre_titulo p 
-    {
-        width: 450px;
-        margin: 5px auto 20px auto;
-    }
-    .Especialidades
-    {
-        font-size: 18px;
-    }
-    .Especialidades_titulo p 
-    {
-        width: 450px;
-        margin: 5px auto 20px auto;
-    }
-    .cads
-    {
-        height: 900px;
-    }
-    .botao_1
-    {
-        padding: 30px;
-    }
-    footer
-    {
-        font-size: 18px;
-    }
-}
-@media (max-width: 425px)
-{
-    body 
-    {
-        overflow-x: hidden;
-    }
-    .topo 
-    {
-          height: 150px;
-          display: flex;
-          flex-direction: column;
-          
-    }
-    nav
-    {
-        border-top: 1px solid;
-        padding: 10px;
-        display: flex;
-        justify-content: space-evenly;
-        width: 95%;
-    }
-    .topo a
-    {
-         padding: 10px;
-    }
-    .banner
-    {   
-        height: 200px;
-        display: flex;
-        font-size: 13px;
-    }
-    .img_medico img 
-    {
-        display: none;
-    }
-    .Sobre 
-    {
-        font-size: 18px;
-    }
-    .Sobre_titulo p 
-    {
-        width: 400px;
-        margin: 5px auto 20px auto;
-    }
-    .Especialidades
-    {
-        font-size: 18px;
-    }
-    .Especialidades_titulo p 
-    {
-        width: 400px;
-        margin: 5px auto 20px auto;
-    }
-    .cads
-    {
-        height: 900px;
-    }
-    .botao_1
-    {
-        padding: 30px;
-    }
-    footer
-    {
-        font-size: 18px;
-    }
-}
  /* Estilo botões */
 
  .link_2:hover 
@@ -285,6 +153,128 @@ footer
     width: 190px;
     height: 95px;
  }
- 
+@media (max-width: 768px)
+{
+    body 
+    {
+        overflow-x: hidden;
+    }
+    .topo 
+    {
+          height: 150px;
+          display: flex;
+          flex-direction: column;
+          
+    }
+    .link_1
+    {
+        border-top: 1px solid;
+        padding: 10px;
+        display: flex;
+        justify-content: space-evenly;
+        width: 95%;
+    }
+    .links nav
+    {
+        padding: 10px;
+        display: flex;
+        justify-content: space-evenly;
+        width: 100%;
+    }
+    .topo a
+    {
+         padding: 10px;
+    }
+    .Titulo_Cads
+    {
+        width: 350px;
+    }
+    .Titulo_Cads p
+    {
+        font-size: 16px;
+    }
+    .Cads
+    {
+        height: 380px;
+    }
 
+    .Cads img
+    {
+        width: 240px;
+        height: 190px;
+    }
+
+    table
+    {
+        width: 250px;
+        font-size: 12px;
+        text-align: center;
+    }
+    footer
+    {
+        font-size: 18px;
+    }
+}
+@media (max-width: 425px)
+{
+    body 
+    {
+        overflow-x: hidden;
+    }
+    .topo 
+    {
+          height: 150px;
+          display: flex;
+          flex-direction: column;
+          
+    }
+    .link_1
+    {
+        border-top: 1px solid;
+        padding: 10px;
+        display: flex;
+        justify-content: space-evenly;
+        width: 95%;
+    }
+    .links nav
+    {
+        padding: 10px;
+        display: flex;
+        justify-content: space-evenly;
+        width: 100%;
+    }
+    .topo a
+    {
+         padding: 10px;
+    }
+    .Titulo_Cads
+    {
+        width: 350px;
+    }
+    .Titulo_Cads p
+    {
+        font-size: 16px;
+    }
+    .Cads
+    {
+        height: 380px;
+    }
+
+    .Cads img
+    {
+        width: 240px;
+        height: 190px;
+    }
+
+    table
+    {
+        width: 250px;
+        font-size: 12px;
+        text-align: center;
+    }
+    footer
+    {
+        font-size: 18px;
+    }
+}
 
